Fix alignment issues with certs

--- a/lms/static/sass/_nyif-accomplishment-rendering.scss
+++ b/lms/static/sass/_nyif-accomplishment-rendering.scss
@@ -4,6 +4,10 @@
 
 		.header-app {
 			height: 105px;
+
+			nyif--certificates__header-app-title {
+				margin: auto;
+			}
 		}
 	}
 
@@ -16,6 +20,7 @@
 		.nyif--certificates__accomplishment-rendering {
 			padding: 1.25em 2em;
 			border-top-width: 0;
+			position: static;
 		}
 
 		.nyif--certificates__accomplishment-statement-detail {
@@ -29,6 +34,7 @@
 			font-style: italic;
 			font-weight: bold;
 			text-align: center;
+			margin: auto;
 		}
 
 		.accomplishment-type-label {
